syntax = "proto3";

package cloud.lazycat.apis.localdevice;

option go_package = "gitee.com/linakesi/lzc-sdk/lang/go/localdevice";

service ClipboardManager {
  rpc Read(ReadClipRequest) returns (ReadClipResponse) {}
  rpc Write(WriteClipRequest) returns (WriteClipResponse) {}
  rpc Watch(ReadClipRequest) returns (stream ReadClipResponse) {}
}

message ReadClipRequest {
  string mime = 1; //目前只支持text/plain和image/png
}

message ReadClipResponse {
  bytes content = 1;
}

message WriteClipRequest {
  string mime = 1;
  bytes content = 2;
}

message WriteClipResponse {
  bool success = 1;
}
